refactor: 🔄 rename project from axum-scaffold to create-axum-app
Major repositioning of the project:
- Changed project name: axum-scaffold → create-axum-app
- Updated positioning: from template scaffold to CLI tool (like create-next-app)
- Added comprehensive README with new project vision
- Updated Cargo.toml with metadata and descriptions

New features planned:
- Single project mode: quick-start single-module Axum app
- Workspace mode: enterprise-grade multi-module architecture
- Interactive CLI wizard for project generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "axum-scaffold"
+name = "create-axum-app"
 version = "0.1.0"
 edition = "2024"
+description = "A command-line tool to quickly create Axum web applications"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Yu-Xiao-Sheng/create-axum-app"
+readme = "README.md"
+keywords = ["axum", "cli", "web", "scaffolding", "rust"]
+categories = ["command-line-utilities", "web-programming"]
 
 [lib]
 path = "src/lib.rs"
