--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,8 @@ git2 = "0.19"
 # File system operations
 fs_extra = "1.3"
 
+# Testing
+tempfile = "3"
+
 # Date/time for templates
 chrono = "0.4"
