feat: complete Phase 3 MVP templates and CLI generation
Implemented all MVP templates and project generation functionality:

Templates Created (T019-T026):
- Cargo.toml.hbs: Project dependencies with conditional features
- src/main.rs.hbs: Server entry point with tokio and axum
- src/lib.rs.hbs: Library exports and module declarations
- src/config.rs.hbs: Environment-based configuration
- src/handlers/health.rs.hbs: Health check endpoint
- src/handlers/mod.rs.hbs: Handler module exports
- .env.example: Environment variables template
- .gitignore: Rust-specific ignore patterns
- README.md.hbs: Bilingual documentation (EN/中文)

CLI Implementation (T027-T031):
- prompts.rs: Interactive prompts using inquire
- Fixed Select API for inquire 0.7.5
- Fixed Confirm::with_help_message API
- Complete generate_project with template rendering
- Success message with next steps

Template Engine Fixes:
- Fixed lib.rs.hbs: removed invalid {{#if !has_auth}} syntax
- Fixed health.rs.hbs: added Router and get imports
- Added anyhow dependency to Cargo.toml.hbs
- Added handlers/mod.rs template for proper module structure

Infrastructure:
- Added exclude = ["test-*"] to prevent test projects in builds
- Fixed template context tests with proper imports
- Updated project generation test with explicit config

All 24 tests passing. CLI successfully generates working Axum projects.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/Yu-Xiao-Sheng/create-axum-app"
 readme = "README.md"
 keywords = ["axum", "cli", "web", "scaffolding", "rust"]
 categories = ["command-line-utilities", "web-programming"]
+exclude = ["test-*", "*.test"]
 
 [lib]
 path = "src/lib.rs"
