refactor: rename project from create-axum-app to axum-app-create
项目重命名以避免与现有 crates.io 包冲突。

更改内容:
- Cargo.toml: 更新 package name 和 repository URL
- 源代码: 更新所有 crate 引用 (create_axum_app -> axum_app_create)
- main.rs: 更新 CLI 命令名称和显示信息
- lib.rs: 更新库注释
- generator/git.rs: 更新 git 签名和提交信息
- 文档测试: 更新所有 use 语句中的 crate 名称
- 测试用例: 更新测试中的项目名称示例

文档更新:
- README.md: 更新所有项目名称引用
- CLAUDE.md: 更新项目标题
- constitution.md: 更新项目名称
- specs/: 更新所有规格文档中的引用

模板更新:
- README.md.hbs: 更新生成项目的文档引用
- context.rs: 更新测试用例中的示例名称

验证:
✅ 所有 32 个测试通过
✅ cargo check 编译成功
✅ 无编译警告

下一步: 重命名本地目录和更新 GitHub 仓库

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "create-axum-app"
+name = "axum-app-create"
 version = "0.1.0"
 edition = "2024"
 description = "A command-line tool to quickly create Axum web applications"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Yu-Xiao-Sheng/create-axum-app"
+repository = "https://github.com/Yu-Xiao-Sheng/axum-app-create"
 readme = "README.md"
 keywords = ["axum", "cli", "web", "scaffolding", "rust"]
 categories = ["command-line-utilities", "web-programming"]
