feat: v0.2.0 - workspace mode, presets, CI/CD integration
- Add workspace mode (multi-crate Clean Architecture projects)
- Add configuration presets (minimal/api/fullstack)
- Add GitHub Actions CI/CD workflow generation (--ci flag)
- Add --mode, --preset, --ci CLI arguments
- Add interactive prompts for mode, preset, CI selection
- Create workspace templates (api/domain/infrastructure/common)
- Create CI workflow template with 4 jobs (check/test/fmt/clippy)
- Add 12 new integration tests + 2 property-based tests
- Update README with new features and examples
- Update CHANGELOG with v0.2.0 entry
- All 66 tests passing, clippy clean, fmt clean

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-app-create"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2024"
 description = "A command-line tool to quickly create Axum web applications"
 license = "MIT OR Apache-2.0"
@@ -41,6 +41,9 @@ fs_extra = "1"
 
 # Testing
 tempfile = "3"
+
+# Property-based testing
+proptest = "1"
 
 # Date/time for templates
 chrono = "0.4"
